# ai-stack

./: .dockerignore  .gitignore  Dockerfile  fly.toml  healthcheck_server.py  monitoring_setup.py  pyproject.toml  requirements.txt  requirements.txt.backup  sentry_integration.py
.github/workflows/: ci.yml  daily-cost-report.yml  deploy.yml  scheduled-trigger.yml
agents/: __init__.py  alert.py  coder.py  evaluator.py  finops.py  metric.py  parser.py  query_ddg.py  reviewer.py  storage.py
docs/: user-manual-ja.md
orchestrator/: main.py
tests/: test_query_parser.py  test_query_parser.py.skip
