
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stack"
version = "0.1.0"
description = "AI Stack with LangGraph DAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat<0.6.0,>=0.5.7",
    "autogen-ext[openai]<0.6.0,>=0.5.7",
    "beautifulsoup4<5.0.0,>=4.13.4",
    "duckduckgo-search<9.0.0,>=8.0.2",
    "icalendar<7.0.0,>=6.3.1",
    "langgraph<0.5.0,>=0.4.7",
    "openai<2.0.0,>=1.82.0",
    "pgvector<0.5.0,>=0.4.1",
    "pytest<9.0.0,>=8.3.5",
    "pytest-subprocess<2.0.0,>=1.5.3",
    "python-dateutil<3.0.0,>=2.9.0.post0",
    "requests<3.0.0,>=2.32.3",
    "resend<3.0.0,>=2.10.0",
    "slack-sdk<4.0.0,>=3.35.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "agents*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]