[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-stack"
version = "0.1.0"
description = "AI Stack with LangGraph DAG"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Junki Kanda", email = "kanda.junki@gmail.com"}
]
dependencies = [
    "autogen-agentchat>=0.5.7,<0.6.0",
    "autogen-ext[openai]>=0.5.7,<0.6.0",
    "beautifulsoup4>=4.13.4,<5.0.0",
    "duckduckgo-search>=8.0.2,<9.0.0",
    "icalendar>=6.3.1,<7.0.0",
    "langgraph>=0.4.7,<0.5.0",
    "openai>=1.82.0,<2.0.0",
    "pgvector>=0.4.1,<0.5.0",
    "pytest>=8.3.5,<9.0.0",
    "pytest-subprocess>=1.5.3,<2.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "requests>=2.32.3,<3.0.0",
    "resend>=2.10.0,<3.0.0",
    "slack-sdk>=3.35.0,<4.0.0",
    "aiohttp==3.9.1",
    "psutil==5.9.6",
    "ruff>=0.1.0",
    "pytest-cov>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["orchestrator*", "agents*"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]